# alpha_pos_core

./: .gitignore  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini
alpha_pos_core/: __init__.py  asgi.py  settings_base.py  urls.py
base/: admin.py  apps.py  models.py  signals.py  test_accounting_cursor.py  test_admin_payment_safety.py  test_bootstrap_admin_security.py  test_branch_scope_repair_migration.py  test_business_day_tod_filter.py  test_cash_register_branching.py  test_courier_session_isolation.py  test_customer_resolve.py  test_customer_sync.py  test_idempotency_payment_recovery.py  test_idempotency_race.py  test_idempotency_resource_scope.py  test_inkassa_migration.py  test_llm.py  test_llm_caching.py  test_llm_retry.py  test_llm_tools.py  test_order_item_active_totals.py  test_order_origin.py  test_order_refund_invariants.py  test_order_refund_multi_event.py  test_paid_at_analytics.py  test_payment_action_sync.py  test_presence.py  test_repair_paid_order_headers.py  test_repair_stale_preparing_orders.py  test_reporting_window_migration.py  test_resync_dead_letters.py  test_revenue_allocation.py  test_settlement_migration_safety.py  test_shift_close_ack.py  test_sync.py  test_sync_audit_log.py  test_sync_changes_snapshot.py  test_sync_cloud_auth.py  test_sync_commit_publication.py  (+20 more)
base/helpers/: cookie.py  request.py  response.py
base/middlewares/: disable_csrf.py  force_json_middleware.py
base/migrations/: 0001_initial.py  0002_user_permissions.py  0003_appsettings_place_alter_user_role_order_place_table_and_more.py  0004_order_discount_amount_order_subtotal_and_more.py  0005_shifttemplate_category_parent_shift_and_more.py  0006_alter_order_is_paid_alter_order_status_and_more.py  0007_syncqueuerecord.py  0008_normalize_order_status_canceled.py  0009_auditlog.py  0010_idempotencykey.py  0011_session_expires_at.py  0012_displayidcounter.py  0013_user_updated_at.py  0014_order_payment_method.py  0015_alter_auditlog_action.py  0016_alter_order_created_at.py  0017_sequencecounter.py  0018_product_ikpu_code.py  0019_alter_user_role.py  0020_paymentmethodconfig_order_discount_percent_and_more.py  0021_seed_payment_methods.py  0022_rolepermission.py  0023_product_is_instant.py  0024_treasuryaccount_alter_auditlog_action_and_more.py  0025_alter_shift_status.py  0026_syncstate.py  0027_alter_table_unique_together_alter_category_slug_and_more.py  0028_alter_treasurytransaction_type.py  0029_remove_category_uniq_category_slug_active_and_more.py  0030_order_chef_queue_number.py  0031_customer_alter_rolepermission_role_alter_user_role_and_more.py  (+23 more)
cashbox/: apps.py  models.py  test_financial_invariants.py  test_supplier_branch_compatibility.py  tests.py  urls.py  views.py
core/: __init__.py
discounts/: admin.py  models.py  test_staff_only.py  tests.py  urls.py
fiscalization/: admin.py  apps.py  config.py  models.py  tests.py  urls.py  views.py
hr/: models.py  test_api_filters.py  test_cash_transaction_integrity.py  test_contract_documents.py
licensing/: admin.py  apps.py  middleware.py  models.py  test_heartbeat_version.py  tests.py  urls.py  views.py
notifications/: admin.py  apps.py  helpers.py  models.py  signals.py  test_callbacks.py  test_cart.py  test_loyalty.py  test_order_notify.py  test_qr_order.py  test_shift_refund_stats.py  test_telegram_bot.py  tests.py  urls.py
stock/: admin.py  test_ai_behavior.py  test_ai_chat.py  test_ai_error_contract.py  test_ai_money_integrity.py  test_ai_query_tool.py  test_ai_tools.py  test_catalog_api_contracts.py  test_local_business_date.py  test_sync_bulk_mutations.py  tests.py  urls.py
(+266 files in other folders)
